[package]
name = "repo-hoarder"
description = "A tool to mass clone repositories from Codeberg"
license = "MIT"
repository = "https://github.com/ofluffydev/repo-hoarder"
readme = "README.md"
keywords = ["git", "repository", "clone", "mirror"]
categories = ["development-tools"]
version = "1.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
flume = "0.11.1"
futures = "0.3.31"
num_cpus = "1.16.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
